<resources>
    <string name="app_name">IngSwInspectorApp</string>
    <string name="downloadTicketsButtonText">Download tickets</string>
    <string name="controlTicketsButtonText">Control tickets</string>
    <string name="uploadControlsButtonText">Upload controls</string>
    <string name="title_activity_control_ticket">ControlTicketActivity</string>
	<string name="confirmButtonText">Confirm</string>
	<string name="insertTheEventId">Insert the event ID</string>
	<string name="selectTheEvent">Select the event</string>
	<string name="selectTheTurnstile">Select the turnstile</string>
	<string name="loading">Loading</string>
	<string name="uploadControls">Upload controls</string>
	<string name="waitWhileDownloading">Please wait, the download is in progress...</string>
	<string name="waitWhileUploading">Please wait, the upload is in progress...</string>
	<string name="insertYourData">Insert your data</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>
	<string name="dateOfBirth">Date of birth</string>
	<string name="documentNumber">Document number</string>
	<string name="documentExpirationDate">Document expiration date</string>
	<string name="scanAQRCode">Scan a QR Code</string>
	<string name="clickHereToLogout">Click here to logout</string>
	<string name="success">Success</string>
	<string name="ticketCode">Ticket code:</string>
	<string name="holder">Holder:</string>
	<string name="error">Error</string>
	<string name="failure">Failure</string>
	<string name="uploadControlsHowMany"> controls found. Do you want to upload them now?</string>
	<string name="eventIdNotExisting">Error: Event ID does not exists. Please retry.</string>
	<string name="wrongCodeError">Error: The read code does not exists, or it belongs to another turnstile.</string>
	<string name="scanFingerprint">Place your tip on your fingerprint sensor to authenticate</string>
	<string name="useDocumentInstead">Or use a document instead</string>
	<string name="failedToReadFingerprint">Failed to read the fingerprint</string>
	<string name="retryOrUseDocument">Please retry or use a document instead</string>
	<string name="allFieldsAreRequired">All fields needs to be filled</string>
	<string name="birthDateNotValid">The selected birth date is not valid</string>
	<string name="documentIsExpired">Your document seems to be expired. Try using another document</string>
	<string name="unknownFingerprintProblem">An unknown problem was found when reading your fingerprint. Please use a document instead</string>
	<string name="uploadCompleted">Upload completed!</string>
	<string name="downloadCompleted">Download completed!</string>
    <string name="dateNotValid">A date you inserted is not valid</string>
    <string name="pleaseWait">Please wait</string>
    <string name="ok">ok</string>
    <string name="connectionUnavailable">Error: an internet connection is needed to advance further. Please check your connection and retry.</string>
</resources>
