<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="4"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/insertYourData"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_rowWeight="10" />

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowWeight="5"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/surnameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_rowWeight="5"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
        android:id="@+id/dateOfBirthTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="5"
        android:layout_column="0"
        android:layout_row="3"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dateOfBirth"
        android:textAlignment="center" />
</GridLayout>
