<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="3"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowWeight="30"
        android:text="@string/uploadControls"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowWeight="60"
        android:id="@+id/uploadControlsHowManyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadControlsHowMany"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium" />


    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="10"
        android:layout_row="2"
        android:text="@string/confirmButtonText"/>

</GridLayout>
