<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="3"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/selectTheEvent"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_rowWeight="80" />

    <EditText
        android:id="@+id/eventIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowWeight="10"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/insertTheEventId"
        android:textAlignment="center" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_rowWeight="10"
        android:text="@string/confirmButtonText" />
</GridLayout>
