<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="50"
        android:layout_height="0px">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/check_mark"
            android:padding="16dp"
            android:layout_marginBottom="64dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="20"
        android:text="@string/ticketCode"
        android:id="@+id/ticketCodeTextView"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="20"
        android:text="@string/holder"
        android:id="@+id/ticketHolderNameTextView"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="10"
        android:text="@string/ok"/>

</LinearLayout>
