<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:columnCount="1"
android:rowCount="4"
android:padding="24dp">

    <Spinner
        android:id="@+id/documentTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowWeight="5" />


    <EditText
        android:id="@+id/documentNumberTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowWeight="5"
        android:hint="@string/documentNumber"
        android:textAlignment="center" />

    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
        android:id="@+id/documentExpiryDateTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_rowWeight="5"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/documentExpirationDate"
        android:textAlignment="center" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_rowWeight="5"
        android:text="@string/confirmButtonText"
        android:textAlignment="center" />

</GridLayout>